adding data type for CHC system

--- a/equivalence-check/equivalence-check.cabal
+++ b/equivalence-check/equivalence-check.cabal
@@ -24,3 +24,4 @@ executable equivalence-check
                        Language.Haskell.Misc
                        Language.Haskell.Types
                        Language.Haskell.Verify
+                       Language.Haskell.CHC
