--- a/equivalence-check/equivalence-check.cabal
+++ b/equivalence-check/equivalence-check.cabal
@@ -20,11 +20,18 @@ executable equivalence-check
                      , parsec-numbers
                      , unordered-containers
                      , pretty
-                     
+                     , array
+                     , mtl
+
   hs-source-dirs:      src
   default-language:    Haskell2010
-  other-modules:       Language.Haskell.Misc
-                       Language.Haskell.Types
-                       Language.Haskell.Verify
-                       Language.Haskell.CHC
-                       Language.Haskell.Expr
+  build-tools:         alex, happy
+  other-modules:       Language.Equivalence.Misc
+                       Language.Equivalence.Types
+                       Language.Equivalence.Lexer
+                       Language.Equivalence.Parser
+                       Language.Equivalence.Verify
+                       Language.Equivalence.CHC
+                       Language.Equivalence.Expr
+
+  Default-Extensions: OverloadedStrings
