--- a/equivalence-check/equivalence-check.cabal
+++ b/equivalence-check/equivalence-check.cabal
@@ -22,6 +22,7 @@ executable equivalence-check
                      , pretty
                      , array
                      , mtl
+                     , process
 
   hs-source-dirs:      src
   default-language:    Haskell2010
