--- a/equivalence-check/equivalence-check.cabal
+++ b/equivalence-check/equivalence-check.cabal
@@ -23,6 +23,7 @@ executable equivalence-check
                      , array
                      , mtl
                      , process
+                     , monad-loops
 
   hs-source-dirs:      src
   default-language:    Haskell2010
