--- a/equivalence-check/equivalence-check.cabal
+++ b/equivalence-check/equivalence-check.cabal
@@ -36,5 +36,6 @@ executable equivalence-check
                        Language.Equivalence.CHC
                        Language.Equivalence.Expr
                        Language.Equivalence.Derivations
+                       Language.Equivalence.TypeInference
 
   Default-Extensions: OverloadedStrings
