--- a/equivalence-check/equivalence-check.cabal
+++ b/equivalence-check/equivalence-check.cabal
@@ -38,5 +38,6 @@ executable equivalence-check
                        Language.Equivalence.Derivations
                        Language.Equivalence.TypeInference
                        Language.Equivalence.RelationalTypes
+                       Language.Equivalence.InfereRelationalTypes
 
   Default-Extensions: OverloadedStrings
