--- a/equivalence-check/equivalence-check.cabal
+++ b/equivalence-check/equivalence-check.cabal
@@ -30,16 +30,15 @@ executable equivalence-check
   default-language:    Haskell2010
   build-tools:         alex, happy
   other-modules:       Language.Equivalence.Misc
-                       Language.Equivalence.Types
-                       Language.Equivalence.Lexer
-                       Language.Equivalence.Parser
-                       Language.Equivalence.Verify
-                       Language.Equivalence.CHC
-                       Language.Equivalence.Expr
-                       Language.Equivalence.Derivations
-                       Language.Equivalence.TypeInference
-                       Language.Equivalence.Transformations
-                       Language.Equivalence.RelationalTypes
-                       -- Language.Equivalence.InfereRelationalTypes
+                     , Language.Equivalence.Types
+                     , Language.Equivalence.Lexer
+                     , Language.Equivalence.Parser
+                     , Language.Equivalence.Verify
+                     , Language.Equivalence.CHC
+                     , Language.Equivalence.Expr
+                     , Language.Equivalence.Derivations
+                     , Language.Equivalence.TypeInference
+                     , Language.Equivalence.Transformations
+                     , Language.Equivalence.RelationalTypes
 
   Default-Extensions: OverloadedStrings
