add simple relational type(an easy way to model list(just try to done before PLDI))

--- a/equivalence-check/equivalence-check.cabal
+++ b/equivalence-check/equivalence-check.cabal
@@ -39,6 +39,7 @@ executable equivalence-check
                      , Language.Equivalence.Derivations
                      , Language.Equivalence.TypeInference
                      , Language.Equivalence.Transformations
-                     , Language.Equivalence.RelationalTypes
+                     , Language.Equivalence.SimpleRelationalTypes
+                     , Language.Equivalence.SimpleInferRelationalTypes
 
   Default-Extensions: OverloadedStrings
